--- a/lesson_22_revision.html
+++ b/lesson_22_revision.html
@@ -869,7 +869,7 @@ try:
     age = 0
 
     if age <= 0:
-        Exception("Invalid age")
+        raise Exception("Invalid age")
 
     print("Valid user")
 
