--- a/lesson_25.html
+++ b/lesson_25.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>STEMxLearning - Lesson 23 Quiz</title>
+    <title>STEMxLearning - Lesson 25 Quiz</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Poppins:wght@400;600;700&display=swap");
 
@@ -716,8 +716,8 @@
             ><span class="brand-learning">Learning</span>
           </div>
         </div>
-        <h1 class="quiz-title">🎯 Lesson 23  Quiz</h1>
-        <p class="quiz-subtitle">Introduction to OOPs</p>
+        <h1 class="quiz-title">🎯 Lesson 25  Quiz</h1>
+        <p class="quiz-subtitle">Introduction to GUI</p>
       </div>
 
       <div class="timer-section">
@@ -732,160 +732,126 @@
       </div>
 
       <div class="content">
-  <form id="quizForm">
+ <form id="quizForm">
 
-<!-- Question 1 (MEDIUM – Common Variable) -->
+<!-- Question 1 (MEDIUM – GUI Concept Understanding) -->
 <div class="question-block">
   <div class="question-number">1</div>
   <div class="question-text">
-    🟠 What will be printed?
-  </div>
-
-  <div class="code-box">
-    <pre>
-class House:
-    rooms = 3
-
-h1 = House()
-print(h1.rooms)
-    </pre>
+    🟠 Why are GUI-based programs easier for users compared to text-based programs?
   </div>
 
   <div class="options">
-    <div class="option"><input type="radio" name="q1" value="A"><label>rooms</label></div>
-    <div class="option"><input type="radio" name="q1" value="B"><label>3</label></div>
-    <div class="option"><input type="radio" name="q1" value="C"><label>Error</label></div>
-    <div class="option"><input type="radio" name="q1" value="D"><label>None</label></div>
+    <div class="option"><input type="radio" name="q1" value="A"><label>They require fewer Python keywords</label></div>
+    <div class="option"><input type="radio" name="q1" value="B"><label>They allow interaction using windows, buttons, and mouse clicks</label></div>
+    <div class="option"><input type="radio" name="q1" value="C"><label>They always run faster than text programs</label></div>
+    <div class="option"><input type="radio" name="q1" value="D"><label>They do not need programming logic</label></div>
   </div>
 </div>
 
-<!-- Question 2 (EASY → MEDIUM) -->
+<!-- Question 2 (EASY → MEDIUM – Object Creation) -->
 <div class="question-block">
   <div class="question-number">2</div>
   <div class="question-text">
-    🟢 What does this line do?
+    🟢 What does the following line do?
   </div>
 
   <div class="code-box">
     <pre>
-student1 = Student()
+window = Tk()
     </pre>
   </div>
 
   <div class="options">
-    <div class="option"><input type="radio" name="q2" value="A"><label>Creates a class</label></div>
-    <div class="option"><input type="radio" name="q2" value="B"><label>Creates an object of Student</label></div>
-    <div class="option"><input type="radio" name="q2" value="C"><label>Calls a method</label></div>
-    <div class="option"><input type="radio" name="q2" value="D"><label>Creates an attribute</label></div>
+    <div class="option"><input type="radio" name="q2" value="A"><label>Creates a widget</label></div>
+    <div class="option"><input type="radio" name="q2" value="B"><label>Creates the main GUI window</label></div>
+    <div class="option"><input type="radio" name="q2" value="C"><label>Starts the program loop</label></div>
+    <div class="option"><input type="radio" name="q2" value="D"><label>Imports the Tkinter library</label></div>
   </div>
 </div>
 
-<!-- Question 3 (MEDIUM) -->
+<!-- Question 3 (MEDIUM – Widget & Window Relationship) -->
 <div class="question-block">
   <div class="question-number">3</div>
   <div class="question-text">
-    🟠 Which line correctly accesses the attribute <b>color</b> of object <b>car1</b>?
+    🟠 Which statement correctly describes the relationship between a window and widgets in Tkinter?
   </div>
 
   <div class="options">
-    <div class="option"><input type="radio" name="q3" value="A"><label>color.car1</label></div>
-    <div class="option"><input type="radio" name="q3" value="B"><label>car1->color</label></div>
-    <div class="option"><input type="radio" name="q3" value="C"><label>car1.color</label></div>
-    <div class="option"><input type="radio" name="q3" value="D"><label>car1(color)</label></div>
+    <div class="option"><input type="radio" name="q3" value="A"><label>Widgets can exist without a window</label></div>
+    <div class="option"><input type="radio" name="q3" value="B"><label>A window is created inside a widget</label></div>
+    <div class="option"><input type="radio" name="q3" value="C"><label>Widgets are placed inside the main window</label></div>
+    <div class="option"><input type="radio" name="q3" value="D"><label>Widgets and windows are the same thing</label></div>
   </div>
 </div>
 
-<!-- Question 4 (MEDIUM – Common Variable Logic) -->
+<!-- Question 4 (MEDIUM – Window Control Logic) -->
 <div class="question-block">
   <div class="question-number">4</div>
   <div class="question-text">
-    🟠 What will be printed?
+    🟠 What is the purpose of the following line?
   </div>
 
   <div class="code-box">
     <pre>
-class Flat:
-    building = "Sunshine"
-
-f1 = Flat()
-f2 = Flat()
-
-f1.building = "Moonlight"
-print(f2.building)
+window.geometry("400x300")
     </pre>
   </div>
 
   <div class="options">
-    <div class="option"><input type="radio" name="q4" value="A"><label>Sunshine</label></div>
-    <div class="option"><input type="radio" name="q4" value="B"><label>Moonlight</label></div>
-    <div class="option"><input type="radio" name="q4" value="C"><label>Error</label></div>
-    <div class="option"><input type="radio" name="q4" value="D"><label>building</label></div>
+    <div class="option"><input type="radio" name="q4" value="A"><label>Changes the color of the window</label></div>
+    <div class="option"><input type="radio" name="q4" value="B"><label>Sets the position of the window on screen</label></div>
+    <div class="option"><input type="radio" name="q4" value="C"><label>Sets the size of the window</label></div>
+    <div class="option"><input type="radio" name="q4" value="D"><label>Starts the GUI window</label></div>
   </div>
 </div>
 
-<!-- Question 5 (MEDIUM – Tricky but DIFFERENT) -->
+<!-- Question 5 (MEDIUM – Widget Concept Check) -->
 <div class="question-block">
   <div class="question-number">5</div>
   <div class="question-text">
-    🟠 What will be printed?
-  </div>
-
-  <div class="code-box">
-    <pre>
-class Bag:
-    def __init__(self):
-        self.items = 0
-
-b1 = Bag()
-b2 = Bag()
-
-b1.items = 5
-print(b2.items)
-    </pre>
+    🟠 Which of the following best defines a widget in Tkinter?
   </div>
 
   <div class="options">
-    <div class="option"><input type="radio" name="q5" value="A"><label>0</label></div>
-    <div class="option"><input type="radio" name="q5" value="B"><label>5</label></div>
-    <div class="option"><input type="radio" name="q5" value="C"><label>items</label></div>
-    <div class="option"><input type="radio" name="q5" value="D"><label>Error</label></div>
+    <div class="option"><input type="radio" name="q5" value="A"><label>A Python keyword used for GUI</label></div>
+    <div class="option"><input type="radio" name="q5" value="B"><label>A tool used only to take input</label></div>
+    <div class="option"><input type="radio" name="q5" value="C"><label>A GUI object used to display or control elements</label></div>
+    <div class="option"><input type="radio" name="q5" value="D"><label>A replacement for the Tk() function</label></div>
   </div>
 </div>
 
-<!-- Question 6 (HARD) -->
+<!-- Question 6 (HARD – mainloop() Deep Understanding) -->
 <div class="question-block">
   <div class="question-number">6</div>
   <div class="question-text">
-    🔥 What will be printed?
+    🔥 Consider the following code:
   </div>
 
   <div class="code-box">
     <pre>
-class Game:
-    def __init__(self):
-        self.score = 0
+from tkinter import *
 
-    def add(self):
-        self.score += 10
-
-g = Game()
-g.add()
-g.add()
-print(g.score)
+window = Tk()
+window.title("My App")
     </pre>
   </div>
 
+  <div class="question-text">
+    What is the main issue with this program?
+  </div>
+
   <div class="options">
-    <div class="option"><input type="radio" name="q6" value="A"><label>0</label></div>
-    <div class="option"><input type="radio" name="q6" value="B"><label>10</label></div>
-    <div class="option"><input type="radio" name="q6" value="C"><label>20</label></div>
-    <div class="option"><input type="radio" name="q6" value="D"><label>Error</label></div>
+    <div class="option"><input type="radio" name="q6" value="A"><label>The title will not be displayed</label></div>
+    <div class="option"><input type="radio" name="q6" value="B"><label>The window will not be created</label></div>
+    <div class="option"><input type="radio" name="q6" value="C"><label>The window will open and close immediately</label></div>
+    <div class="option"><input type="radio" name="q6" value="D"><label>Tkinter cannot work without widgets</label></div>
   </div>
 </div>
 
 <button type="submit" class="submit-btn" id="submitBtn">
-            <span>🎉 Submit My Answers! 🎉</span>
-          </button>
+  <span>🎉 Submit My Answers! 🎉</span>
+</button>
 
 </form>
 
@@ -906,8 +872,8 @@ print(g.score)
      q1: "B",
         q2: "B",
         q3: "C",
-        q4: "A",
-        q5: "A",
+        q4: "C",
+        q5: "C",
         q6: "C"
       };
 
