--- a/lesson_23.html
+++ b/lesson_23.html
@@ -810,7 +810,7 @@ class Flat:
 f1 = Flat()
 f2 = Flat()
 
-f1.building = "Moonlight"
+Flat.building = "Moonlight"
 print(f2.building)
     </pre>
   </div>
@@ -906,7 +906,7 @@ print(g.score)
      q1: "B",
         q2: "B",
         q3: "C",
-        q4: "A",
+        q4: "B",
         q5: "A",
         q6: "C"
       };
