--- a/lesson_23_revision.html
+++ b/lesson_23_revision.html
@@ -732,7 +732,7 @@
       </div>
 
       <div class="content">
-  <form id="revisionQuizForm">
+  <form id="quizForm">
 
 <!-- Question 1 (MEDIUM – Understanding self) -->
 <div class="question-block">
@@ -854,36 +854,51 @@ print(c.count)
   </div>
 </div>
 
-<!-- Question 6 (HARD – OOPS Conceptual Thinking) -->
+<!-- Question 6 (HARD – Common Variable Execution Order) -->
 <div class="question-block">
   <div class="question-number">6</div>
   <div class="question-text">
-    🔥 Why is using a <b>class</b> better than using many separate variables in real life programs?
+    🔥 What will be printed?
+  </div>
+
+  <div class="code-box">
+    <pre>
+class Game:
+    level = 1
+
+g1 = Game()
+Game.level = 2
+
+g2 = Game()
+Game.level = 3
+
+print(g1.level, g2.level)
+    </pre>
   </div>
 
   <div class="options">
     <div class="option">
       <input type="radio" name="q6" value="A">
-      <label>Because classes run faster than variables</label>
+      <label>1 2</label>
     </div>
     <div class="option">
       <input type="radio" name="q6" value="B">
-      <label>Because classes group data and behavior together for real-world entities</label>
+      <label>2 2</label>
     </div>
     <div class="option">
       <input type="radio" name="q6" value="C">
-      <label>Because classes avoid using functions</label>
+      <label>3 3</label>
     </div>
     <div class="option">
       <input type="radio" name="q6" value="D">
-      <label>Because classes automatically print output</label>
+      <label>2 3</label>
     </div>
   </div>
 </div>
 
-<button type="submit" class="submit-btn" id="submitRevisionBtn">
-  <span>🎯 Submit Revision Quiz 🎯</span>
-</button>
+<button type="submit" class="submit-btn" id="submitBtn">
+            <span>🎉 Submit My Answers! 🎉</span>
+          </button>
 
 </form>
 
@@ -906,7 +921,7 @@ print(c.count)
         q3: "B",
         q4: "C",
         q5: "C",
-        q6: "B"
+        q6: "C"
       };
 
       const QUIZ_DURATION = 180;
