--- a/lesson_26.html
+++ b/lesson_26.html
@@ -780,9 +780,10 @@ from tkinter import *
 root = Tk()
 
 entry = Entry(root)
-entry.pack()
 
-entry.insert(0, "Enter number")
+entry.insert(index = 0, string = "Enter number")
+
+entry.pack()
 
 root.mainloop()
     </pre>
